--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 #los comentarios empiezan con hash
 
 #aqui se ignora un solo archivo
-new-file.txt
+another-file.txt
 
 #aqui se ignora todo un directorio
 bin/
